Fix detail padding on mobile

--- a/src/components/Detail/styles.sass
+++ b/src/components/Detail/styles.sass
@@ -12,7 +12,7 @@
   font-size: 14px
 
   @include breakpoint(small)
-    padding: 15px 10px 10px
+    padding: 8px 10px 10px
 
 .content
   flex: auto
